# Holohub-Signal-Detection

./: .gitignore  CLAUDE.md  README.md  USRP_X410_Holoscan_FFT_README.txt  build_instructions.md  running_pytorch_in_holohub.md  sage_dev_notes.md  sage_implementation_plan.md
applications/usrp_freq_detection/: CMakeLists.txt  Dockerfile  README.md  bootstrap_build.sh  config.yaml  main.cpp  metadata.json  replay_rx_to_buff.py  restart_usrp_container.sh  rx_to_remote_udp.py
applications/usrp_freq_detection/CHDR_converter/: CMakeLists.txt  README.md  chdr_rx.cu  chdr_rx.h  swap.cuh  swap.h
applications/usrp_wideband_signal_detection/: .code-workspace.code-workspace  .gitignore  4-13development plan.md  4-19development_plan.md  CMakeLists.txt  README.md  after_reboot.sh  analyze_drop_log.py  build_demo_container.sh  build_fixes.md  build_holoviz_container.sh  calibrate_coherent_power_config.sh  calibrate_dino_coherence_config.py  calibrate_dino_positional_template.py  compare_offline_dino_subsection.py  config.yaml  config_coherent_power_calibrated_single_channel.yaml  config_coherent_power_capture_chdr_single_channel.yaml  config_coherent_power_debug_capture.yaml  config_coherent_power_downsample_offline.yaml  config_coherent_power_ingress_diagnostic_single_channel.yaml  config_coherent_power_live_reference_debug_artifacts.yaml  config_coherent_power_live_timing_reference.yaml  config_coherent_power_live_timing_reference_snapshot_250.yaml  config_coherent_power_perf_dynamic_single_channel.yaml  config_coherent_power_perf_perfreq_single_channel.yaml  config_coherent_power_performance.yaml  config_coherent_power_performance_emit_stride1_two_channel.yaml  config_coherent_power_performance_emit_stride1_two_channel_mask_probe.yaml  config_coherent_power_performance_emit_stride1_two_channel_save_artifacts.yaml  config_coherent_power_performance_single_channel.yaml  config_coherent_power_performance_single_channel_a2000.yaml  config_coherent_power_performance_single_channel_replay.yaml  config_coherent_power_performance_single_channel_save_artifacts.yaml  config_coherent_power_realtime_guarded.yaml  config_coherent_power_validation.yaml  config_computer_vision_single_channel.yaml  config_computer_vision_tuned_single_channel.yaml  config_cuda_dino_calibration_dump_single_channel.yaml  config_cuda_dino_finetuned_downsample_offline.yaml  (+104 more)
applications/usrp_wideband_signal_detection/bash_scripts/: after_reboot.sh  build_all_detector_operators.sh  build_demo_container.sh  build_finetuned_dino_operator.sh  container_env.sh  enter_demo_container.sh  rebuild_and_debug.sh  rebuild_demo_container_app.sh  run_all_detectors.sh  run_coherent_power_performance.sh  run_coherent_power_reference_timing.sh  run_demo_container.sh  run_offline_cuda_dino_operator_replay.sh  run_offline_snipper.sh  run_torchscript_performance_single_channel.sh  run_torchscript_performance_test.sh  setup_demo_container.sh  sigmf_stream_params.py  test_finetuned_dino_offline.sh
applications/usrp_wideband_signal_detection/calibration/: README.md  calibrate_coherent_power_config.py  calibrate_coherent_power_config.sh  calibrate_dino_coherence_config.sh  calibration_script.sh  coherent_power_per_freq_floor.npy  config_coherent_power_calibrated_single_channel.calibration.json  config_coherent_power_calibration_dump_single_channel.yaml  config_cuda_dino_coherence_calibrated_single_channel.yaml  config_cuda_dino_coherence_calibration_dump_single_channel.yaml  dino_coherence_per_freq_gate_threshold.npy  dino_coherence_per_freq_power_floor.calibration.json  dino_coherence_per_freq_power_floor.npy  dino_vitb16_noise_sigma_64x64.json  dino_vitb16_noise_sigma_64x64.npy  extract_noise_regions.py
applications/usrp_wideband_signal_detection/debug_scripts/: README.md  compare_offline_dino_subsection.py  downsample_gain_experiment.py  make_noise_region.py  overlay_offline_masks.py  plot_offline_dino_cuda_artifact_compare.py  realtime_budget.py  show_model_inputs.py  timing_downsample_path.py
applications/usrp_wideband_signal_detection/generated_configs/: config_cuda_dino_performance_single_channel_attenuation_dB_0_offline_eval.yaml  config_cuda_dino_performance_single_channel_attenuation_dB_0_samples_30208254_36598014_offline_eval.yaml  config_cuda_dino_performance_single_channel_attenuation_dB_0_samples_30781694_36024574_offline_eval.yaml
applications/usrp_wideband_signal_detection/generated_inputs/: attenuation_dB_0_samples_30208254_36598014.sigmf-meta  attenuation_dB_0_samples_30781694_36024574.sigmf-meta
applications/usrp_wideband_signal_detection/notes/: finetuned_dino_operator_plan.md  retrain_band_rate_invariant_plan.md  signal_snipper_design.md
applications/usrp_wideband_signal_detection/old_configs/: config.yaml  config_coherent_power_debug_capture.yaml  config_coherent_power_validation.yaml  (+17 more)
operators/coherent_power_signal_detector/: CMakeLists.txt  README.md  coherent_power_signal_detector.cu  coherent_power_signal_detector.hpp  metadata.json
operators/computer_vision_baseline/: CMakeLists.txt  README.md  computer_vision_baseline.cu  computer_vision_baseline.hpp  metadata.json
operators/computer_vision_tuned/: CMakeLists.txt  README.md  computer_vision_tuned.cu  computer_vision_tuned.hpp  metadata.json
operators/dinov3_signal_detector/: CMakeLists.txt  README.md  dinov3_libtorch_sandbox.cpp  dinov3_runtime_cuda_preprocess.cu  dinov3_runtime_cuda_preprocess.hpp  dinov3_signal_detector.cu  dinov3_signal_detector.hpp  dinov3_torch_runtime.cpp  dinov3_torch_runtime.hpp  dinov3_torch_runtime_stub.cpp  metadata.json
operators/mask_replay_detector/: CMakeLists.txt  README.md  mask_replay_detector.cu  mask_replay_detector.hpp  metadata.json
operators/power_detection_tuned/: CMakeLists.txt  README.md  metadata.json  power_detection_tuned.cu  power_detection_tuned.hpp
operators/spectrogram/: CMakeLists.txt  README.md  metadata.json  spectrogram.cu  spectrogram.hpp
operators/yolo_detector/: CMakeLists.txt  README.md  metadata.json  yolo_detector.cu  yolo_detector.hpp  yolo_torch_helpers.cpp  yolo_torch_helpers.hpp
(+270 files in other folders)
